# learn-agentic-ai

./: README.md  Tiltfile  comprehensive_guide_daca.md  raos.md
00_openai_agents/00_uv/01_project/explore-uv/: pyproject.toml
00_openai_agents/00_uv/01_project/explore-uv/src/explore_uv/: __init__.py
00_openai_agents/02_uv/uv-project2/: pyproject.toml
00_openai_agents/18_deployment/02_advanced_config/: .env  Dockerfile  README.md  chainlit.md  pyproject.toml
00_openai_agents/18_deployment/02_advanced_config/custom_auth/: auth.py
00_openai_agents/18_deployment/02_advanced_config/custom_components/: Message.tsx
00_openai_agents/18_deployment/02_advanced_config/custom_theme/: theme.py
01_ai_agents_first/08_tools/weather_agent_class/: pyproject.toml
01_ai_agents_first/08_tools/weather_agent_class/src/weather_updated/: __init__.py  agent.py
01_openai_agents/19_voice_mode/: README.md  pyproject.toml
06_crew_ai/01_intro/my_new_flow/: pyproject.toml
06_crew_ai/01_litellm/myproject/: pyproject.toml
06_crew_ai/02_intro/00_python_decorators/myproject/: pyproject.toml
06_crew_ai/11_email_auto_responder_flow/email_auto_responder_flow/: README.md  pyproject.toml
06_crew_ai/11_email_auto_responder_flow/email_auto_responder_flow/src/email_auto_responder_flow/: email.py  main.py
06b_crew_ai/03_flows_patterns/01_prompt_chaining/prompt_chaining/: README.md  crewai_flow.html  pyproject.toml
06b_crew_ai/04_crews_agents_tasks/code_examples_crewai/05knowldge5/: README.md  pyproject.toml
06b_crew_ai/05_augmented_llms/01_llms/01litellm/: README.md  poem.txt  pyproject.toml
06b_crew_ai/11_agentic_patterns/pr7/: crewai_flow.html  fun_fact.md  pyproject.toml
06b_crew_ai/11_agentic_patterns/pr7/src/pr7/: __init__.py  main.py  main1.py  main2.py  main3.py
07_ckad/: readme.md
07b_crew_ai/04_crews_agents_tasks/code_examples_crewai/02localllm/: README.md  pyproject.toml
07b_crew_ai/12_monitoring/monitoring_cr/: pyproject.toml
07b_crew_ai/12_monitoring/monitoring_cr/src/monitoring_cr/: crew.py
07c_langgraph_functional_api/10a_deployment/lg_dev_mode/: .gitignore  pyproject.toml
12a_langgraph_functional_api/00_fun_fact_city/fun_fact_city/: README.md  pyproject.toml
12a_langgraph_functional_api/00_fun_fact_city/fun_fact_city/src/fun_fact_city/: __init__.py  workflow.py
12a_langgraph_functional_api/04_prompt_chaining_pattern/customer_support_email_composer/: .env.example  pyproject.toml
12a_langgraph_functional_api/04_prompt_chaining_pattern/customer_support_email_composer/output/: customer_support_email_composer.txt
12a_langgraph_functional_api/04_prompt_chaining_pattern/customer_support_email_composer/src/customer_support_email_composer/: __init__.py  workflow.py
12a_langgraph_functional_api/04_prompt_chaining_pattern/multilingual_marketing_copy/: pyproject.toml
12a_langgraph_functional_api/04_prompt_chaining_pattern/multilingual_marketing_copy/output/: marketing_copy_French.txt  marketing_copy_Japanese.txt  marketing_copy_Mandarin Chinese.txt
12a_langgraph_functional_api/04_prompt_chaining_pattern/multilingual_marketing_copy/src/multilingual_marketing_copy/: __init__.py  run.py
12a_langgraph_functional_api/04_prompt_chaining_pattern/recipe_generator/: README.md  pyproject.toml
12a_langgraph_functional_api/04_prompt_chaining_pattern/recipe_generator/output/: recipe.md
12a_langgraph_functional_api/04_prompt_chaining_pattern/recipe_generator/src/recipe_generator/: __init__.py  workflow.py
12a_langgraph_functional_api/05_parallelization_pattern/hello_parallel/: README.md  pyproject.toml
12a_langgraph_functional_api/05_parallelization_pattern/hello_parallel/src/hello_parallel/: async_parallel.py  sync_parallel.py
12a_langgraph_functional_api/06_routing_pattern/customer_support_request/: README.md  pyproject.toml
12a_langgraph_functional_api/06_routing_pattern/customer_support_request/output/: customer_support_request.txt  customer_support_response.txt
12a_langgraph_functional_api/06_routing_pattern/customer_support_request/src/customer_support_request/: __init__.py  workflow.py
12a_langgraph_functional_api/07_orchestrator_worker_pattern/personalized_health_and_fitness_plan_generator/: README.md  pyproject.toml
12a_langgraph_functional_api/07_orchestrator_worker_pattern/personalized_health_and_fitness_plan_generator/output/: orchestrator-worker.txt
12a_langgraph_functional_api/07_orchestrator_worker_pattern/personalized_health_and_fitness_plan_generator/src/personalized_health_and_fitness_plan_generator/: __init__.py  workflow.py
12a_langgraph_functional_api/07_orchestrator_worker_pattern/workflow_evaluator/: .env.example  pyproject.toml
12a_langgraph_functional_api/07_orchestrator_worker_pattern/workflow_evaluator/output/: evaluation_report.md
12a_langgraph_functional_api/07_orchestrator_worker_pattern/workflow_evaluator/src/workflow_evaluator/: workflow.py
12a_langgraph_functional_api/10a_deployment/langgraph_demo/: .env.example  pyproject.toml
15_autogen_microsoft/01_agentchat_helloworld/helloworld/: pyproject.toml
15_autogen_microsoft/01_agentchat_helloworld/helloworld/src/helloworld/: hello.py
15_autogen_microsoft/04_agents_messages/agents_messages/: pyproject.toml
15_autogen_microsoft/04_agents_messages/agents_messages/src/agents_messages/: __init__.py  message.py  multimodal.py
15_autogen_microsoft/06_human_in_the_loop/console_chat_agent/: README.md  pyproject.toml
15_autogen_microsoft/10_selector_group_chat/enterprise_research_group/: pyproject.toml
15_autogen_microsoft/10_selector_group_chat/enterprise_research_group/src/enterprise_research_group/: group1.py
backup_recent/AGENT_PROTOTYPES/appointment-agent/: langgraph.json  pyproject.toml
backup_recent/AGENT_PROTOTYPES/appointment-agent/prototype/: scheduling_agent.ipynb
backup_recent/AGENT_PROTOTYPES/appointment-agent/src/appointment_agent/: __init__.py  graph.py  prompts.py  state.py
backup_recent/AGENT_PROTOTYPES/appointment-agent/src/react_agent/: __init__.py
backup_recent/AGENT_PROTOTYPES/appointment-agent/tests/integration_tests/: test_graph.py
(+1170 files in other folders)
