[project]
name = "weather-updated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ibtisam Anwar", email = "ibtisamanwar008@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.13",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[project.scripts]
weather-updated = "weather_updated:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
