[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zia Khan", email = "ziaukhan@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.59.1",
]

[project.scripts]
openai = "myproject.hello:openai"
gemini = "myproject.hello:gemini"
gemini2 = "myproject.hello:gemini2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
