[project]
name = "email_auto_responder_flow"
version = "0.1.0"
description = "email_auto_responder_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "asyncio>=3.4.3",
    "crewai-tools>=0.33.0",
    "crewai[tools]>=0.100.0,<1.0.0",
    "google-api-python-client>=2.160.0",
    "google-auth-oauthlib>=1.2.1",
    "langchain-tools>=0.1.34",
]

[project.scripts]
kickoff = "email_auto_responder_flow.main:kickoff"
plot = "email_auto_responder_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
