[project]
name = "pr7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sir Qasim", email = "m.qasim077@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.100.1",
]

[project.scripts]
pr7 = "pr7:main"
simpleflow = "pr7.main:kickoff"
chain_prompt = "pr7.main1:kickoff"
route_run = "pr7.main2:kickoff"
route_plot = "pr7.main2:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
