[project]
name = "fun-fact-city"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Junaid", email = "mr.junaidshaukat@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langchain-google-genai>=2.0.9",
    "langgraph>=0.2.69",
    "python-dotenv>=1.0.1",
]

[project.scripts]
invoke = "fun_fact_city:main"
stream = "fun_fact_city:stream"

[tool.setuptools]
packages = ["fun_fact_city"]

[tool.setuptools.package-dir]
"fun_fact_city" = "src/fun_fact_city"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
