[project]
name = "multilingual_marketing_copy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Junaid", email = "mr.junaidshaukat@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langchain-google-genai>=2.0.9",
    "langgraph>=0.2.69",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]

[project.scripts]
invoke = "multilingual_marketing_copy:main"
stream = "multilingual_marketing_copy:stream"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
