[project]
name = "hello-parallel"
version = "0.1.0"
description = "Demo of parallel processing patterns in LangGraph"
readme = "README.md"
authors = [
    { name = "Muhammad Junaid", email = "mr.junaidshaukat@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.72",
]

[project.scripts]
async-parallel = "hello_parallel.async_parallel:run_async_workflow"
sync-parallel = "hello_parallel.sync_parallel:run_sync_workflow"

[tool.hatch.scripts]
async = "python -m hello_parallel.async_parallel"
sync = "python -m hello_parallel.sync_parallel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
