[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Junaid", email = "mr.junaidshaukat@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.72",
]

[project.scripts]
langgraph-demo = "langgraph_demo:main"
prompt-chain = "langgraph_demo.prompt_chain:run_workflow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
