[project]
name = "helloworld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zia Khan", email = "ziaukhan@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.4.7",
    "autogen-ext[openai]>=0.4.7",
]

[project.scripts]
helloworld = "helloworld.hello:run_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
