[project]
name = "hello-agentchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Junaid", email = "mr.junaidshaukat@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.4.7",
    "autogen-ext[azure,openai]>=0.4.7",
    "python-dotenv>=1.0.1",
]

[project.scripts]

hil = "hello_agentchat.hil:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
