[project]
name = "enterprise-research-group"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Junaid", email = "mr.junaidshaukat@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.4.7",
    "autogen-ext[openai]>=0.4.7",
    "python-dotenv>=1.0.1",
]

[project.scripts]
enterprise-research-group = "enterprise_research_group:main"
group1 = "enterprise_research_group.group1:call_enterprise_research_group"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
