[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zia Khan", email = "ziaukhan@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
say_hello = "myproject:say_hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
